# vidmod

./: .gitignore  AUDIO_MUXING.md  AUDIO_PLAYLIST.md  CMakeLists.txt  COMMIT_MESSAGE.txt  EXAMPLES.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TODO.md  build.sh  check_dependencies.sh  example_chain.json  fftvidmod2.py  ipatlea_effect_01.json  jpor_fx_chain.json  report_playlist_lengths.py  strange_diffusion_fx_chain.json  test.json
include/: AudioBuffer.h  AudioColorEffect.h  AudioPlaylist.h  AutomationWindow.h  BitplaneReactorEffect.h  CAGlowEffect.h  CircleQuiltEffect.h  CircularBuffer.h  DiffuseEffect.h  EdgeInkEffect.h  Effect.h  EffectChain.h  FFTEffect.h  FractalEffect.h  GUI.h  LightEffect.h  MoldTrailsEffect.h  NeuralCircleEffect.h  NeuralTileEffect.h  ParameterAutomation.h  ShadowEffect.h  VideoBuffer.h  VideoProcessor.h
src/: AudioBuffer.cpp  AudioColorEffect.cpp  AudioPlaylist.cpp  AutomationWindow.cpp  BitplaneReactorEffect.cpp  CAGlowEffect.cpp  CircleQuiltEffect.cpp  CircularBuffer.cpp  DiffuseEffect.cpp  EdgeInkEffect.cpp  Effect.cpp  EffectChain.cpp  FFTEffect.cpp  FractalEffect.cpp  GUI.cpp  LightEffect.cpp  MoldTrailsEffect.cpp  NeuralCircleEffect.cpp  NeuralTileEffect.cpp  ParameterAutomation.cpp  ShadowEffect.cpp  VideoBuffer.cpp  VideoProcessor.cpp  main.cpp
